Fixed post-login menu horizontal alignment.

--- a/public/stylesheets/topbar.css
+++ b/public/stylesheets/topbar.css
@@ -11,6 +11,7 @@
 {
 	position: relative;
 	background: #1d2124;
+	width: 100%;
 	height: 64pt;
 }
 
